Fix MinimizedRepresentation